--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio player</title> 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
+    </head>
 </head>
 <body>
     <section>
     <div class="head">
         <h4 style="color: #d4b96a;">Nightcore It Wasn't Me At All</h4>
+        <p>Watch on youtube</p>
+        <a href=""><i class='bx bxl-youtube'></i></a>
     </div>
     <div class="player">
         <div class="imgBox">
@@ -22,6 +26,8 @@
     <section>
     <div class="head">
         <h4 style="color: #fb86fa;">Nightcore - All You Need To Know (Lyrics)</h4>
+        <p>Watch on youtube</p>
+        <a href=""><i class='bx bxl-youtube'></i></a>
     </div>
     <div class="player">
         <div class="imgBox">
@@ -34,6 +40,8 @@
     <section>
         <div class="head">
             <h4 style="color: #3889c1;">「Nightcore」→ sweet things (Lyrics)</h4>
+            <p>Watch on youtube</p>
+            <a href=""><i class='bx bxl-youtube'></i></a>
         </div>
         <div class="player">
             <div class="imgBox">
@@ -46,6 +54,8 @@
     <section>
         <div class="head">
             <h4 style="color: #b9adaf;">Nightcore - Singing Without You</h4>
+            <p>Watch on youtube</p>
+            <a href=""><i class='bx bxl-youtube'></i></a>
         </div>
         <div class="player">
             <div class="imgBox">
@@ -53,6 +63,14 @@
             </div>
             <audio src="music/Nightcore - Singing Without You_p9OyIHNNW8c.mp3" type="audio/mp3" controls></audio>
         </div>
+    </section>
+
+    <div class="player">
+        <div class="imgBox">
+             <img src="image/Screenshot_20230720-121450.jpg" alt="image" >
+        </div>
+        <audio src="music/Nightcore Keenan_Te_-_Scars_(Lyrics)_(320_kbps)_0.mp3" type="audio/mp3" controls></audio>
+    </div>
     </section>
             
     
